# cm3l

./: .gitignore  CMakeLists.txt  ast.sh  build.sh  input.cm3l  map.sh  readme.txt  runtime.sh
.junk/: Composer.c  ideas.txt  input.cm3l  main.cels  sc  script.hmtest  source.cels  source2.cels  types.txt
.test/: input.cm3l  map.sh  map_o2.sh  ops.txt  syntax.cm3l  syntax2.cm3l
include/cm3l/: Composer.h  Lexer.h  Parser.h  Runtime.h
include/cm3l/Lib/: DHTMap.h  DLList.h  Hash.h  HashMap.h  HashMapEv.h  IdMap.h  MapCommon.h  Memory.h  SLList.h  Vector.h
include/cm3l/Loadtime/: NameResolver.h  _desc.txt
include/cm3l/Runtime/: Context.h  Object.h  RuntimeOld.h
source/: ast.c  dht.c  dhtbench.c  dllist.cpp  main.c  map.c  mapbench.c  mapev.c  mapevbench.c  queue.c  runtime.cpp  stlbench.cpp
source/cm3l/: Composer.c  Lexer.c  Parser.c  composer.cm3l
source/cm3l/Lib/: DHTMap.c  DLList.c  Hash.c  HashMap.c  HashMapEv.c  IdMap.c  SLList.c  Vector.c
source/cm3l/Loadtime/: NameResolver.c
source/cm3l/Runtime/: Context.c
